[tool.poetry]
name = "pymerkle"
version = "0.1.0"
description = ""
authors = ["larestrepo <larestrepomu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cachetools = "^5.5.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"
flake8 = "^7.1.1"
bandit = "^1.7.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
